// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders default 1`] = `
<DocumentFragment>
  <div
    class="css-4z0fcg"
  >
    <span>
      Example Content
    </span>
  </div>
</DocumentFragment>
`;

exports[`Card renders with gutterSize set 1`] = `
<DocumentFragment>
  <div
    class="css-1vxpdor"
  >
    <span>
      Example Content
    </span>
  </div>
</DocumentFragment>
`;
